--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^0.21.1",
+        "form-data": "^4.0.0",
+        "js-cookie": "^3.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
