--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.21.1",
         "form-data": "^4.0.0",
         "js-cookie": "^3.0.0",
+        "node-sass": "4.14.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
