--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "axios": "^0.21.1",
         "form-data": "^4.0.0",
         "js-cookie": "^3.0.0",
-        "node-sass": "4.14.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.12.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.0.1"
