--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "GENERATE_SCRIPT=false react-scripts build",
+        "build": "GENERATE_SCRIPT=false CI= react-scripts build"",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
